--- a/src/FigLex-Handout.Rnw
+++ b/src/FigLex-Handout.Rnw
@@ -6,6 +6,16 @@ opts_knit$set(self.contained=FALSE)
 @
 
 <<multiplot>>=
+# Multiple plot function
+#From: http://www.cookbook-r.com/Graphs/Multiple_graphs_on_one_page_(ggplot2)/
+# ggplot objects can be passed in ..., or to plotlist (as a list of ggplot objects)
+# - cols:   Number of columns in layout
+# - layout: A matrix specifying the layout. If present, 'cols' is ignored.
+#
+# If the layout is something like matrix(c(1,2,3,3), nrow=2, byrow=TRUE),
+# then plot 1 will go in the upper left, 2 will go in the upper right, and
+# 3 will go all the way across the bottom.
+#
 multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
     require(grid)
 
@@ -56,9 +66,7 @@ textsize = 12
 \usepackage{graphicx}
 \usepackage[rightcaption]{sidecap}
 
-
 \setlength{\parindent}{0pt}
-% \setlength{\parskip}{1em}
 \pagestyle{fancy}
 \renewcommand{\figurename}{Example}
 
@@ -66,30 +74,25 @@ textsize = 12
 \fancyhead[C]{\fontsize{24}{10} \selectfont \sc{Figure Lexicon}}
 \cfoot{Attribution-NonCommercial-ShareAlike 4.0 International: Dmitriy Gorenshteyn}
 
-%Definiitons
+%Definitions
 \newcommand{\lex}[3]{
-\lettrine[lines=2,slope=0pt,nindent=3pt]{\uppercase{#1}}{}
-#2
-{\large \emph{#3}}
+  \lettrine[lines=2,slope=0pt,nindent=3pt]{\uppercase{#1}}{}
+  #2
+  {\large \emph{#3}}
 }
 
 \begin{document}
-
-% \begin{center} 
-%   {\Huge Visualization Lexicon} \\
-%   \hrulefill
-% \end{center}
 
 {\Large\textbf{What is a figure?}}
 If we imagine a \textbf{visualization} as a visual interface between the viewer and the data then a figure is a visualization selected to convey a specific \textbf{message(s)} present in the data. The lexicon presented below allows us to  analyze and discuss the components present in the figure and their contribution to conveying the figure's intended message(s).
 \medskip
 \hrule
 \smallskip
+
 \lex{composition}
 {Visual information can frequently be represented in multiple ways; the choice of how to view this data is the composition. 
 % Writing lexicon parallel: \textbf{structure}
-}
-{\\ What is the best way to \textbf{compose} the image in order to represent the data?}
+}{\\ What is the best way to \textbf{compose} the image in order to represent the data?}
 
 <<composition, dependson="figurespecs">>=
 library(xkcd)
@@ -99,8 +102,6 @@ library(dplyr)
 set.seed(2)
 diamonds_binned <- diamonds %>% mutate(carat=cut(carat,labels = seq(1,6,1),breaks=seq(0,6,1))) %>%
   mutate(carat=as.numeric(as.character(carat))) %>% group_by(carat) %>% filter(carat<6)
-diamonds_binsum <- diamonds_binned %>% summarise(avgprice=mean(price)) 
-
 
 p_smooth <- ggplot() + geom_smooth(aes(x = carat,y = price),data = diamonds,se=FALSE,size=1.5) + 
   xkcdaxis(xrange = c(0,5),yrange = range(diamonds$price),jitteramount=.1) + 
@@ -119,28 +120,23 @@ multiplot(p_smooth,p_box,cols = 2)
 
 \vspace{-12pt}
 \begin{SCfigure}[1][h]
-\centering
-\caption{Two examples of \textbf{compositions} that can be used to represent the same data; in this case the relationship between the carat and the price of a diamond. \smallskip \par{\underline{Addt'l Compositions:} bar plot, dot plot, density plot, violin plot} \medskip \par{\emph{Message: The price of a diamond increases with size (carat)}}  \vspace{12pt}}
-\includegraphics[width=4.7in]{figure/plot_comp-1.png}
-
-
+  \centering
+  \caption{Two examples of \textbf{compositions} that can be used to represent the same data; in this case the relationship between the carat and the price of a diamond. \smallskip \par{\underline{Addt'l Compositions:} bar plot, dot plot, density plot, violin plot} \medskip \par{\emph{Message: The price of a diamond increases with size (carat)}}  \vspace{12pt}}
+  \includegraphics[width=4.7in]{figure/plot_comp-1.png}
 \end{SCfigure}
+
 \vspace{-12pt}
 \smallskip
-
-
 \hrule
 \smallskip
+
 \lex{detail}
 {The detail term reflects the amount information that is presented to the viewer. It is a delicate balance aimed at providing enough information to convey the message while limiting extraneous information that may detract from it.
 % Writing lexicon parallel: \textbf{scope}
-}
-{\\ What is the level of \textbf{detail} required to convey your message?}
+}{\\ What is the level of \textbf{detail} required to convey your message?}
 
-<<detail,dependson="figspecs">>=
+<<detail,dependson=c("figspecs","composition")>>=
 set.seed(2)
-diamonds_binned <- diamonds %>% mutate(carat=cut(carat,labels = seq(1,6,1),breaks=seq(0,6,1))) %>%
-  mutate(carat=as.numeric(as.character(carat))) %>% group_by(carat) %>% filter(carat<6)
 
 d_smooth <- ggplot() + geom_jitter(aes(x = carat,y = price),data = diamonds,size=1,alpha=.5) +  
   geom_smooth(aes(x = carat,y = price),data = diamonds,se=FALSE,size=1.5) +   
@@ -148,39 +144,38 @@ d_smooth <- ggplot() + geom_jitter(aes(x = carat,y = price),data = diamonds,size
   theme(title = element_text(size = textsize)) +
   ggtitle("Line Plot")
 
-d_box <- ggplot() + geom_violin(aes(x = factor(carat),y = price),data = diamonds_binned) + 
+d_violin <- ggplot() + geom_violin(aes(x = factor(carat),y = price),data = diamonds_binned) + 
   xkcdaxis(xrange = c(0,5.3),yrange = range(diamonds_binned$price),jitteramount=.1) + 
   theme(title = element_text(size = textsize)) +
   ggtitle("Violin Plot") + xlab("Carat")
 @
 
 <<plot_detail, dependson=c("detail","multiplot"),fig.height=2,fig.width=4.7,dpi=150,dev=c('png'), fig.show='hide'>>=
-multiplot(d_smooth,d_box,cols = 2)
+multiplot(d_smooth,d_violin,cols = 2)
 @
 
 \vspace{-11pt}
 \begin{SCfigure}[1][h]
-\centering
-\caption{The same examples as Figure 1 can be viewed with additonal detail. The line plot now has the individual points plotted, the boxplot has been converted to a violin plot (providing us with the additional detail of price distribution). \medskip \par{\emph{Does this additional detail contribute effectively to the message?}}\vspace{11pt}}
-\includegraphics[width=4.7in]{figure/plot_detail-1.png}
-
+  \centering
+  \caption{The same examples as Figure 1 can be viewed with additonal detail. The line plot now has the individual points plotted, the boxplot has been converted to a violin plot (providing us with the additional detail of price distribution).  \medskip \par{\emph{Does this additional detail contribute effectively to the message?}}\vspace{11pt}}
+  \includegraphics[width=4.7in]{figure/plot_detail-1.png}
 \end{SCfigure}
+
 \vspace{-12pt}
 \smallskip
 \hrule
 \smallskip
+
 \lex{key features}
 {Abstractly, key features are the ideas present in the figure that directly contribute to the message.
 % Writing lexicon parallel: \textbf{topic sentences}
-}
-{}
+}{}
+
 \smallskip
 \lex{\& guides}
 {Guides are visual cues that direct the viewers attention to the key features.
 % \\ Writing lexicon parallel: \textbf{signposts}
-}
-{\\ What \textbf{features} are \textbf{key} to convey the message of this figure? \&
-}
+}{\\ What \textbf{features} are \textbf{key} to convey the message of this figure? \&}
 \par{\hspace{116pt} \large{\emph{How do you \textbf{guide} the viewer to the “Key Features”?}}}
 
 
@@ -202,10 +197,9 @@ ggplot() +  geom_smooth(aes(year,rating,color=category,linetype=category),data =
 
 \vspace{-11pt}
 \begin{SCfigure}[1][h]
-\centering
-\caption{The best way to understand key features is to determine which elements of a figure convey the intended message. In this example the most prominent key feature is the relationship between comedy \& drama over time. The elements \textbf{color, line type, axis labels, figure title and legend} act as \underline{guides} by directing attention and providing the necessary context of this relationship. \vspace{37pt}
-}
-\includegraphics[width=4.4in]{figure/kfg-1.png}
+  \centering
+  \caption{The best way to understand key features is to determine which elements of a figure convey the intended message. In this example the most prominent key feature is the relationship between comedy \& drama over time. The elements \textbf{color, line type, axis labels, figure title and legend} act as \underline{guides} by directing attention and providing the necessary context of this relationship. \vspace{37pt}}
+  \includegraphics[width=4.4in]{figure/kfg-1.png}
 
 \end{SCfigure}
 \vspace{-12pt}
